Various page_load_metrics cleanups and improvements

* break dependency on RenderViewHost where possible
* log more detailed error codes when an invalid timing IPC is received
* log whether each page load started in the foreground
* count the number of prerenders

The latter three are important in improving our understanding of metrics
differences we are seeing with browser side navigation enabled.

BUG=709140

Review-Url: https://codereview.chromium.org/2804093002
Cr-Commit-Position: refs/heads/master@{#463263}

Former-commit-id: 06c594634073ae8cc37099fadd15cd02ae035398